# vpr_relocalization

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  readme.md
apps/: CMakeLists.txt
apps/cost_matrix_based_matching/: CMakeLists.txt  cost_matrix_based_matching_dh.cpp  cost_matrix_based_matching_lsh.cpp
apps/create_cost_matrix/: CMakeLists.txt  create_cost_matrix.cpp  create_cost_matrix_config.yaml
apps/estimate_non_match_cost/: estimate_non_match_cost.cpp  match_example.txt  nonMatch_example.txt  non_match_cost_estimator.cpp  non_match_cost_estimator.h
apps/estimate_similar_places/: CMakeLists.txt  check_sim_places.py  estimate_similar_places.cpp  readme.md
apps/feature_based_matching/: CMakeLists.txt  feature_based_matching_dh.cpp  feature_based_matching_dh_no_vis.cpp  feature_based_matching_lsh.cpp
apps/hash_features/: CMakeLists.txt  hash_features.cpp
doc/: online_place_recognition.conf
examples/: config_file.yaml  download_sample_data.sh  readme.md  run_dh_matching.sh  run_dh_matching_matrix.sh  run_dh_matching_no_vis.sh  run_lsh_matching.sh
src/: CMakeLists.txt
src/database/: CMakeLists.txt  cost_matrix_database.cpp  cost_matrix_database.h  idatabase.h  list_dir.cpp  list_dir.h  online_database.cpp  online_database.h
src/features/: CMakeLists.txt  cnn_feature.cpp  cnn_feature.h  cnn_feature_mean.cpp  cnn_feature_mean.h  feature_buffer.cpp  feature_buffer.h  feature_factory.cpp  feature_factory.h  ibinarizable_feature.h  ifeature.h  readme.md  vgg_feature.cpp  vgg_feature.h  vgg_feature_mean.cpp  vgg_feature_mean.h
src/online_localizer/: CMakeLists.txt  ilocvisualizer.h  online_localizer.cpp  online_localizer.h  path_element.cpp  path_element.h
src/relocalizers/: CMakeLists.txt  dimensions_hashing.cpp  dimensions_hashing.h  irelocalizer.h  lsh_cv_hashing.cpp  lsh_cv_hashing.h  readme.md
src/successor_manager/: node.cpp  node.h  readme.md  successor_manager.cpp  successor_manager.h
src/tools/config_parser/: CMakeLists.txt  config_parser.cpp  config_parser.h  parameters_readme.md
src/tools/timer/: timer.cpp  timer.h
src/visualizer/: CMakeLists.txt  full_matrix_visualizer.cpp  full_matrix_visualizer.h  localization_viewer.cpp  localization_viewer.h  match_viewer.cpp  match_viewer.h  visualizer.cpp  visualizer.h
test/: database_test.cpp  feature_buffer_test.cpp  online_localizer_test.cpp  successor_manager_test.cpp  test_dimension_hashing.cpp
test/test_data/: simPlaces_test.txt  test_ref_hash_dim.txt
